Updated bootstrap 3 (Fixed menu collapse)

--- a/static/css/admin-main.styl
+++ b/static/css/admin-main.styl
@@ -1,16 +1,4 @@
 body
-  padding-top: 60px
+  padding-top: 70px
   padding-bottom: 40px
 
-.container
-  padding: 40px
-
-.top-menu
-  margin-top: 70px
-  margin-bottom: 50px
-
-.category-item
-  margin-bottom: 20px
-
-.product-item
-  margin-bottom: 20px
